[tool.basedpyright]
ignore = ['./']
venv = "./.venv/"
venvPath = "./.venv/"

[tool.pdm]
distribution = false

[project]
name = "nn-edge-dtc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["torch", "torchvision", "numpy", "matplotlib", "opencv-python"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0"}

